--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "videos"
   ],
   "author": "Slqmy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fs": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.9"
+  }
 }
