--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs": "^0.0.1-security"
   },
   "devDependencies": {
-    "@types/node": "^20.14.9"
+    "@types/node": "^20.14.9",
+    "typescript": "^5.5.2"
   }
 }
